Option to ignore Kodi watched status if Get Hbo Go Watched status is enabled, update to languages #3

--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:29+0100\n"
+"PO-Revision-Date: 2019-12-18 10:12+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: cz_CZ\n"
@@ -49,11 +49,6 @@ msgstr ""
 "přihlásit na oficiální stránky a zkuzte to znovu. Jestliže problém přetrvává "
 "požádejte o podporu s úplným ladícím výpisem"
 
-#, fuzzy
-#| msgctxt "#30104"
-#| msgid ""
-#| "Operaotr not selected. Please select your country/operaotr in the "
-#| "settings."
 msgctxt "#30104"
 msgid ""
 "Operator not selected. Please select your country/operator in the settings."
@@ -87,9 +82,6 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Nastavení selhalo, zkuste to znovu"
 
-#, fuzzy
-#| msgctxt "#30445"
-#| msgid "Chose your operator"
 msgctxt "#30445"
 msgid "Choose your operator"
 msgstr "Vyberte operátora"
@@ -98,9 +90,6 @@ msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
-#, fuzzy
-#| msgctxt "#30665"
-#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr ""
@@ -199,9 +188,6 @@ msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACE"
 
-#, fuzzy
-#| msgctxt "#30714"
-#| msgid "I understand the risk continue"
 msgctxt "#30714"
 msgid "I understand the risks and continue"
 msgstr "Rozumím riziku pokračování"
@@ -384,4 +370,8 @@ msgstr ""
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30805"
+msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
 msgstr ""
