--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:30+0100\n"
+"PO-Revision-Date: 2019-12-18 10:13+0100\n"
 "Last-Translator: J.M. Pongilioni ('boblo' @ Kodi Forums) <djinn2k2@gmail."
 "com>\n"
 "Language-Team: Spanish\n"
@@ -52,11 +52,6 @@ msgstr ""
 "nuevo, si el problema persiste, solicita ayuda con un registro de depuración "
 "completo"
 
-#, fuzzy
-#| msgctxt "#30104"
-#| msgid ""
-#| "Operaotr not selected. Please select your country/operaotr in the "
-#| "settings."
 msgctxt "#30104"
 msgid ""
 "Operator not selected. Please select your country/operator in the settings."
@@ -92,9 +87,6 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Error en la configuración, por favor, inténtalo de nuevo"
 
-#, fuzzy
-#| msgctxt "#30445"
-#| msgid "Chose your operator"
 msgctxt "#30445"
 msgid "Choose your operator"
 msgstr "Elige tu operador"
@@ -103,9 +95,6 @@ msgctxt "#30660"
 msgid "DRM"
 msgstr ""
 
-#, fuzzy
-#| msgctxt "#30665"
-#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr "Ajustes de InputStream Adaptive (tasa de bits máx., resolución, etc.)"
@@ -207,9 +196,6 @@ msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACIÓN"
 
-#, fuzzy
-#| msgctxt "#30714"
-#| msgid "I understand the risk continue"
 msgctxt "#30714"
 msgid "I understand the risks and continue"
 msgstr "Entiendo los riesgos y continuar"
@@ -352,9 +338,6 @@ msgstr ""
 "¿Estás seguro de que deseas restablecer completamente tu configuración (se "
 "perderá el registro del dispositivo)?"
 
-#, fuzzy
-#| msgctxt "#30693"
-#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
 msgstr ""
@@ -396,4 +379,8 @@ msgstr ""
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30805"
+msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
 msgstr ""
