--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:31+0100\n"
+"PO-Revision-Date: 2019-12-18 10:13+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: fi_FI\n"
@@ -49,11 +49,6 @@ msgstr ""
 "virallisella sivustolla ja yritä sen jälkeen uudestaan. Jos virhe toistuu, "
 "kerää täysi debug-logi ja pyydä tukea."
 
-#, fuzzy
-#| msgctxt "#30104"
-#| msgid ""
-#| "Operaotr not selected. Please select your country/operaotr in the "
-#| "settings."
 msgctxt "#30104"
 msgid ""
 "Operator not selected. Please select your country/operator in the settings."
@@ -88,9 +83,6 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Asennus epäonnistui, yritä uudestaan"
 
-#, fuzzy
-#| msgctxt "#30445"
-#| msgid "Chose your operator"
 msgctxt "#30445"
 msgid "Choose your operator"
 msgstr "Valitse palveluntarjoaja"
@@ -99,9 +91,6 @@ msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
-#, fuzzy
-#| msgctxt "#30665"
-#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr "Latauksen Adaptiiviset Asetukset (resoluutio, yms.)"
@@ -201,9 +190,6 @@ msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMAATIO"
 
-#, fuzzy
-#| msgctxt "#30714"
-#| msgid "I understand the risk continue"
 msgctxt "#30714"
 msgid "I understand the risks and continue"
 msgstr "Ymmärrän riskit ja haluan jatkaa"
@@ -346,9 +332,6 @@ msgstr ""
 "Oletko varma, että haluat palauttaa kaikki asetuksesi (laiterekisteröinti "
 "menetetään ) ?"
 
-#, fuzzy
-#| msgctxt "#30693"
-#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
 msgstr ""
@@ -388,4 +371,8 @@ msgstr ""
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30805"
+msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
 msgstr ""
