--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:33+0100\n"
+"PO-Revision-Date: 2019-12-18 10:15+0100\n"
 "Last-Translator: \n"
 "Language-Team: arvvoid, kowalmisiek\n"
 "Language: pl_PL\n"
@@ -52,11 +52,6 @@ msgstr ""
 "problem nadal występuje, poproś o wsparcie przy użyciu pełnego dziennika "
 "debugowania"
 
-#, fuzzy
-#| msgctxt "#30104"
-#| msgid ""
-#| "Operaotr not selected. Please select your country/operaotr in the "
-#| "settings."
 msgctxt "#30104"
 msgid ""
 "Operator not selected. Please select your country/operator in the settings."
@@ -91,9 +86,6 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Konfiguracja nie powiodła się. Spróbuj ponownie"
 
-#, fuzzy
-#| msgctxt "#30445"
-#| msgid "Chose your operator"
 msgctxt "#30445"
 msgid "Choose your operator"
 msgstr "Wybierz swojego operatora"
@@ -102,9 +94,6 @@ msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
-#, fuzzy
-#| msgctxt "#30665"
-#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr ""
@@ -205,9 +194,6 @@ msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACJE"
 
-#, fuzzy
-#| msgctxt "#30714"
-#| msgid "I understand the risk continue"
 msgctxt "#30714"
 msgid "I understand the risks and continue"
 msgstr "Rozumiem ryzyko i kontunuuje"
@@ -260,9 +246,6 @@ msgctxt "#30726"
 msgid "Rate"
 msgstr "Ocena"
 
-#, fuzzy
-#| msgctxt "#33727"
-#| msgid "Success"
 msgctxt "#30727"
 msgid "Success"
 msgstr "Sukces"
@@ -313,9 +296,6 @@ msgctxt "#30652"
 msgid "Always use original titles"
 msgstr "Zawsze używaj oryginalnych tytułów"
 
-#, fuzzy
-#| msgctxt "#30655"
-#| msgid "Subtitles"
 msgctxt "#30653"
 msgid "Inject subtitles"
 msgstr "Napisy"
@@ -399,4 +379,8 @@ msgstr ""
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30805"
+msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
 msgstr ""
