--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:33+0100\n"
+"PO-Revision-Date: 2019-12-18 10:16+0100\n"
 "Last-Translator: tmihai20\n"
 "Language-Team: arvvoid\n"
 "Language: ro_RO\n"
@@ -41,12 +41,6 @@ msgctxt "#30102"
 msgid "Operators"
 msgstr "Operatori"
 
-#, fuzzy
-#| msgctxt "#30103"
-#| msgid ""
-#| "Sorry, you are not correctly logged in, aborting playback. Try to login "
-#| "on the official site then try again, if the problem persist ask support "
-#| "with a full debug log"
 msgctxt "#30103"
 msgid ""
 "Sorry, you are not correctly logged in, aborting play. Try to login on the "
@@ -74,9 +68,6 @@ msgctxt "#30440"
 msgid "Settings"
 msgstr "Setări"
 
-#, fuzzy
-#| msgctxt "#30441"
-#| msgid "Choose your Country"
 msgctxt "#30441"
 msgid "Chose your Country"
 msgstr "Alegeți țara"
@@ -379,4 +370,8 @@ msgstr ""
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30805"
+msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
 msgstr ""
