Update fi_fi translation #3

--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 10:13+0100\n"
+"PO-Revision-Date: 2019-12-18 13:40+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: fi_FI\n"
@@ -335,7 +335,7 @@ msgstr ""
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
 msgstr ""
-"Sisällytä yksityiskohtaiset tiedot/ladattu data sellaisenaan Debug-lokiin"
+"Sisällytä yksityiskohtaiset tiedot/ladattu data sellaisenaan Debug-logiin"
 
 msgctxt "#30694"
 msgid ""
@@ -355,24 +355,24 @@ msgstr "Ryhmittele Kotilistat erikoiskategorioissa"
 
 msgctxt "#30800"
 msgid "Sync play time with Hbo Go"
-msgstr ""
+msgstr "Synkronoi toistoaika Hbo Go:n kanssa"
 
 msgctxt "#30801"
 msgid "Send elapsed time to Hbo go"
-msgstr ""
+msgstr "Lähetä kulunut aika Hbo Go:hun"
 
 msgctxt "#30802"
 msgid "Get elapsed time from Hbo go"
-msgstr ""
+msgstr "Hae kulunut aika Hbo Go:sta"
 
 msgctxt "#30803"
 msgid "Set watched on Hbo Go"
-msgstr ""
+msgstr "Aseta katsotuksi Hbo Go:ssa"
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
-msgstr ""
+msgstr "Aseta katsomattomaksi Hbo Go:ssa"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
-msgstr ""
+msgstr "Näytä Hbo Go:n Katsottu-tila Kodi:n Katsottu-tilan sijaan"
