update hr_hr translation #3

--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -97,15 +97,15 @@ msgstr "InputStream Helper information"
 
 msgctxt "#30667"
 msgid "(Re)install Widevine CDM..."
-msgstr "(Re)install Widevine CDM..."
+msgstr "Ponovno instaliraj Widevine CDM…"
 
 msgctxt "#30668"
 msgid "Remove Widevine CDM..."
-msgstr "Remove Widevine CDM..."
+msgstr "Ukloni Widevine CDM…"
 
 msgctxt "#30669"
 msgid "InputStream Helper settings..."
-msgstr "InputStream Helper settings..."
+msgstr "Postavke InputStream Helper ..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
@@ -170,17 +170,15 @@ msgid ""
 "TO CONTINUE?"
 msgstr ""
 "UPOZORENJE. Omogućili ste opciju [Uključi osjetljive podatke za prijavu u "
-"dnevnik otklanjanja pogrešaka] u ovim stručnim postavkama dodatka. AKO NE "
-"ZNATE ZNAŠ ZAŠTO STE POMOĆI DA NJEGOVO ISKLJUČITE, NIJE POTREBNO !! To znači "
-"da ako je debug dnevnik omogućen u Kodi, vaše osjetljive i privatne "
-"informacije za prijavu i podaci sesije bit će zapisani u dnevnik otklanjanja "
-"pogrešaka. Nemojte javno dijeliti takav dnevnik. AKO TREBATE POSTAVLJATI "
-"LOGOVNIK ZA ODBIJANJE JAVNO ISKLJUČUJEMO TU OPCIJU. Ako stvarno trebate "
-"poslati zapisnik s tom opcijom koja je omogućena za ispravljanje problema "
-"vezanih uz prijavu / sesiju, budite vrlo oprezni tko i vi šaljete taj "
-"dnevnik te to radite privatno i promijenite lozinku što je prije moguće. Ako "
-"ste takav zapisnik javno objavili slučajno, promijenite zaporku što je prije "
-"moguće. ŽELITE LI NASTAVITI?"
+"dnevnik otklanjanja pogrešaka]. AKO NE ZNATE TOČNO ZAŠTO STE OPCIJU "
+"UKLJUČILI, ODMAH ISKLJUČITE, NIJE POTREBNO !! Opcija znači da ako je debug "
+"dnevnik omogućen u Kodi, vaše osjetljive i privatne informacije za prijavu i "
+"podaci sesije bit će zapisani u dnevnik otklanjanja pogrešaka. Nemojte javno "
+"dijeliti takav dnevnik. AKO TREBATE POSTAVLJATI DNEVNIK JAVNO ISKLJUČITE TU "
+"OPCIJU. Ako stvarno trebate poslati zapisnik s tom opcijom, budite vrlo "
+"oprezni kome šaljete taj dnevnik te to radite privatno i promijenite lozinku "
+"što je prije moguće. Ako ste takav zapisnik javno objavili slučajno, "
+"promijenite lozinku što je prije moguće. ŽELITE LI NASTAVITI?"
 
 msgctxt "#30713"
 msgid "INFORMATION"
@@ -188,7 +186,7 @@ msgstr "INFORMACIJA"
 
 msgctxt "#30714"
 msgid "I understand the risks and continue"
-msgstr "Razumijem da se rizik nastavlja"
+msgstr "Razumijem rizik, nastavi"
 
 msgctxt "#30715"
 msgid "Stop, let me change the settings"
@@ -256,15 +254,15 @@ msgstr "Tjedni vrh"
 
 msgctxt "#30731"
 msgid "History"
-msgstr ""
+msgstr "Povijest"
 
 msgctxt "#30732"
 msgid "Continue Watching"
-msgstr ""
+msgstr "Nastavi gledanje"
 
 msgctxt "#30733"
 msgid "Home Lists"
-msgstr ""
+msgstr "Popisi raznih vrsta"
 
 msgctxt "#30650"
 msgid "Language"
@@ -300,7 +298,7 @@ msgstr "Prisiliti naslove prikladne za brisanje"
 
 msgctxt "#30680"
 msgid "Session"
-msgstr "sjednica"
+msgstr "Sesija"
 
 msgctxt "#30681"
 msgid "Session valid for hours"
@@ -312,7 +310,7 @@ msgstr "Resetiraj sesiju, prisili ponovno prijavljivanje"
 
 msgctxt "#30690"
 msgid "Debug"
-msgstr "otkloniti neispravnost"
+msgstr "Debug"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
@@ -328,49 +326,46 @@ msgstr ""
 "Are you sure you want to completely reset your setup (device registration "
 "will be lost ) ?"
 
-#, fuzzy
-#| msgctxt "#30693"
-#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
-msgstr "Include full details/RAW retrived data in Debug log"
+msgstr "Uključi potpune detalje/IZVORNE dohvaćene podatke u zapisnik pogreška"
 
 msgctxt "#30694"
 msgid ""
 "Cryptodome dependency not present on your system, HBO go add-on can't run. "
 "For help consult install instructions/official support thread"
 msgstr ""
-"Cryptodome dependency not present on your system, HBO go add-on can't run. "
-"For help consult install instructions/official support thread"
+"Cryptodome ovisnost nije prisutna na vašem sustavu, HBO go Add-on se ne može "
+"pokrenuti. Za pomoć proučite instalacijske upute"
 
 msgctxt "#30696"
 msgid "Home Category"
-msgstr ""
+msgstr "Početna kategorija"
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
-msgstr ""
+msgstr "Grupiraj početni popis u posebnu kategoriju"
 
 msgctxt "#30800"
 msgid "Sync play time with Hbo Go"
-msgstr ""
+msgstr "Sinkronizacija vremena izvođenja s HBO Go"
 
 msgctxt "#30801"
 msgid "Send elapsed time to Hbo go"
-msgstr ""
+msgstr "Pošalji proteklo vrijeme na HBO go"
 
 msgctxt "#30802"
 msgid "Get elapsed time from Hbo go"
-msgstr ""
+msgstr "Dohvati proteklo vrijeme od HBO go"
 
 msgctxt "#30803"
 msgid "Set watched on Hbo Go"
-msgstr ""
+msgstr "Postavljeno kao gledano na HBO Go"
 
 msgctxt "#30804"
 msgid "Set un-watched on Hbo Go"
-msgstr ""
+msgstr "Postavljeno kao ne-gledano na HBO Go"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
-msgstr ""
+msgstr "Zanemari Kodi status gledanja (samo prikazati HBO Go status)"
