--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -38,8 +38,8 @@ msgstr ""
 
 msgctxt "#30103"
 msgid ""
-"Sorry, you are not correctly logged in, aborting play. Try to login on the "
-"official site then try again, if the problem persist ask support with a full "
+"Sorry, you are not correctly logged in, aborting playback. Try to login on the "
+"official site then try again, if the problem persists ask support with a full "
 "debug log"
 msgstr ""
 
@@ -61,7 +61,7 @@ msgid "Settings"
 msgstr ""
 
 msgctxt "#30441"
-msgid "Chose your Country"
+msgid "Choose your Country"
 msgstr ""
 
 msgctxt "#30442"
@@ -85,7 +85,7 @@ msgid "DRM"
 msgstr ""
 
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
+msgid "Inputstream Adaptive Settings (max bitrate, resolution, etc.)"
 msgstr ""
 
 msgctxt "#30666"
@@ -109,7 +109,7 @@ msgid "Find movies and TV Shows..."
 msgstr ""
 
 msgctxt "#30701"
-msgid "No result"
+msgid "No results"
 msgstr ""
 
 msgctxt "#30702"
@@ -315,7 +315,7 @@ msgstr ""
 
 msgctxt "#30694"
 msgid ""
-"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"Cryptodome dependency not present on your system, HBO Go add-on can't run. "
 "For help consult install instructions/official support thread"
 msgstr ""
 
@@ -328,25 +328,25 @@ msgid "Group Home lists in special category"
 msgstr ""
 
 msgctxt "#30800"
-msgid "Sync play time with Hbo Go"
+msgid "Sync play time with HBO Go"
 msgstr ""
 
 msgctxt "#30801"
-msgid "Send elapsed time to Hbo go"
+msgid "Send elapsed time to HBO Go"
 msgstr ""
 
 msgctxt "#30802"
-msgid "Get elapsed time from Hbo go"
+msgid "Get elapsed time from HBO Go"
 msgstr ""
 
 msgctxt "#30803"
-msgid "Set watched on Hbo Go"
+msgid "Set as watched on HBO Go"
 msgstr ""
 
 msgctxt "#30804"
-msgid "Set un-watched on Hbo Go"
+msgid "Set as unwatched on HBO Go"
 msgstr ""
 
 msgctxt "#30805"
-msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
+msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr ""
