spanish update by @boblo1 and spanish resync with english changes

--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,9 +7,8 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 10:13+0100\n"
-"Last-Translator: J.M. Pongilioni ('boblo' @ Kodi Forums) <djinn2k2@gmail."
-"com>\n"
+"PO-Revision-Date: 2019-12-18 20:57+0100\n"
+"Last-Translator: J.M. Pongilioni <djinn2k2@gmail.com>\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -43,9 +42,9 @@ msgstr "Operadores"
 
 msgctxt "#30103"
 msgid ""
-"Sorry, you are not correctly logged in, aborting play. Try to login on the "
-"official site then try again, if the problem persist ask support with a full "
-"debug log"
+"Sorry, you are not correctly logged in, aborting playback. Try to login on "
+"the official site then try again, if the problem persists ask support with a "
+"full debug log"
 msgstr ""
 "Lo sentimos, no has iniciado sesión correctamente, cancelando la "
 "reproducción. Intenta iniciar sesión en el sitio oficial y luego prueba de "
@@ -72,7 +71,7 @@ msgid "Settings"
 msgstr "Ajustes"
 
 msgctxt "#30441"
-msgid "Chose your Country"
+msgid "Choose your Country"
 msgstr "Elige tu país"
 
 msgctxt "#30442"
@@ -96,7 +95,7 @@ msgid "DRM"
 msgstr ""
 
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
+msgid "Inputstream Adaptive Settings (max bitrate, resolution, etc.)"
 msgstr "Ajustes de InputStream Adaptive (tasa de bits máx., resolución, etc.)"
 
 msgctxt "#30666"
@@ -120,7 +119,7 @@ msgid "Find movies and TV Shows..."
 msgstr "Encontrar películas y series de TV..."
 
 msgctxt "#30701"
-msgid "No result"
+msgid "No results"
 msgstr "Sin resultados"
 
 msgctxt "#30702"
@@ -346,7 +345,7 @@ msgstr ""
 
 msgctxt "#30694"
 msgid ""
-"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"Cryptodome dependency not present on your system, HBO Go add-on can't run. "
 "For help consult install instructions/official support thread"
 msgstr ""
 "La dependencia Cryptodome no está presente en tu sistema, el complemento HBO "
@@ -362,25 +361,26 @@ msgid "Group Home lists in special category"
 msgstr "Agrupar listas iniciales en una categoría especial"
 
 msgctxt "#30800"
-msgid "Sync play time with Hbo Go"
-msgstr ""
+msgid "Sync play time with HBO Go"
+msgstr "Sincronizar tiempo de reproducción con HBO Go"
 
 msgctxt "#30801"
-msgid "Send elapsed time to Hbo go"
-msgstr ""
+msgid "Send elapsed time to HBO Go"
+msgstr "Enviar tiempo transcurrido a HBO Go"
 
 msgctxt "#30802"
-msgid "Get elapsed time from Hbo go"
-msgstr ""
+msgid "Get elapsed time from HBO Go"
+msgstr "Obtener tiempo transcurrido de HBO Go"
 
 msgctxt "#30803"
-msgid "Set watched on Hbo Go"
-msgstr ""
+msgid "Set as watched on HBO Go"
+msgstr "Marcar como visto en HBO Go"
 
 msgctxt "#30804"
-msgid "Set un-watched on Hbo Go"
-msgstr ""
+msgid "Set as unwatched on HBO Go"
+msgstr "Marcar como no visto en HBO Go"
 
 msgctxt "#30805"
-msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
+msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr ""
+"Ignorar estado de visto en Kodi (mostrar sólo estado de visto en HBO Go)"
