--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 00:44+0100\n"
+"PO-Revision-Date: 2019-12-18 20:54+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: en_GB\n"
@@ -28,8 +28,8 @@ msgstr ""
 msgctxt "#30101"
 msgid ""
 "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
-"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
-"ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
+"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON "
+"THE ADD-ON GITHUB PAGE OR KODI FORUM"
 msgstr ""
 
 msgctxt "#30102"
@@ -38,8 +38,8 @@ msgstr ""
 
 msgctxt "#30103"
 msgid ""
-"Sorry, you are not correctly logged in, aborting play. Try to login on the "
-"official site then try again, if the problem persist ask support with a full "
+"Sorry, you are not correctly logged in, aborting playback. Try to login on the "
+"official site then try again, if the problem persists ask support with a full "
 "debug log"
 msgstr ""
 
@@ -61,7 +61,7 @@ msgid "Settings"
 msgstr ""
 
 msgctxt "#30441"
-msgid "Chose your Country"
+msgid "Choose your Country"
 msgstr ""
 
 msgctxt "#30442"
@@ -85,7 +85,7 @@ msgid "DRM"
 msgstr ""
 
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
+msgid "Inputstream Adaptive Settings (max bitrate, resolution, etc.)"
 msgstr ""
 
 msgctxt "#30666"
@@ -109,7 +109,7 @@ msgid "Find movies and TV Shows..."
 msgstr ""
 
 msgctxt "#30701"
-msgid "No result"
+msgid "No results"
 msgstr ""
 
 msgctxt "#30702"
@@ -154,17 +154,16 @@ msgstr ""
 
 msgctxt "#30712"
 msgid ""
-"WARNING. You enabled the [Include sensitive login data in debug log] option "
-"in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED "
-"THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is "
-"enabled in Kodi, your sensitive and private login information and session "
-"data will be written to the debug log. Please don't share publicly such a "
-"log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
-"really have to send a log with that option enabled to debug a login/session "
-"related issue be very CAREFUL who you send that log too and do it privately "
-"and change your password as soon as possible. If you posted such a log "
-"publicly by accident, change your password as soon as possible. DO YOU WANT "
-"TO CONTINUE?"
+"WARNING. You enabled the [Include sensitive login data in debug log] option in "
+"this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT "
+"DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in "
+"Kodi, your sensitive and private login information and session data will be "
+"written to the debug log. Please don't share publicly such a log. IF YOU NEED "
+"TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a "
+"log with that option enabled to debug a login/session related issue be very "
+"CAREFUL who you send that log too and do it privately and change your password "
+"as soon as possible. If you posted such a log publicly by accident, change "
+"your password as soon as possible. DO YOU WANT TO CONTINUE?"
 msgstr ""
 
 msgctxt "#30713"
@@ -305,8 +304,8 @@ msgstr ""
 
 msgctxt "#30692"
 msgid ""
-"Are you sure you want to completely reset your setup (device registration "
-"will be lost ) ?"
+"Are you sure you want to completely reset your setup (device registration will "
+"be lost ) ?"
 msgstr ""
 
 msgctxt "#30693"
@@ -315,8 +314,8 @@ msgstr ""
 
 msgctxt "#30694"
 msgid ""
-"Cryptodome dependency not present on your system, HBO go add-on can't run. "
-"For help consult install instructions/official support thread"
+"Cryptodome dependency not present on your system, HBO Go add-on can't run. For "
+"help consult install instructions/official support thread"
 msgstr ""
 
 msgctxt "#30696"
@@ -328,25 +327,25 @@ msgid "Group Home lists in special category"
 msgstr ""
 
 msgctxt "#30800"
-msgid "Sync play time with Hbo Go"
+msgid "Sync play time with HBO Go"
 msgstr ""
 
 msgctxt "#30801"
-msgid "Send elapsed time to Hbo go"
+msgid "Send elapsed time to HBO Go"
 msgstr ""
 
 msgctxt "#30802"
-msgid "Get elapsed time from Hbo go"
+msgid "Get elapsed time from HBO Go"
 msgstr ""
 
 msgctxt "#30803"
-msgid "Set watched on Hbo Go"
+msgid "Set as watched on HBO Go"
 msgstr ""
 
 msgctxt "#30804"
-msgid "Set un-watched on Hbo Go"
+msgid "Set as unwatched on HBO Go"
 msgstr ""
 
 msgctxt "#30805"
-msgid "Ignore Kodi Watched status (Only display Hbo Go watch status)"
+msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr ""
