language update hu_hu by @Ajnasz (#3)

--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2019-12-19 14:39+0100\n"
 "Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
@@ -349,24 +349,26 @@ msgstr "Főmenü listák csoportosítása"
 
 msgctxt "#30800"
 msgid "Sync play time with HBO Go"
-msgstr ""
+msgstr "Lejátszási idő szinkronizálása az HBO Goval"
 
 msgctxt "#30801"
 msgid "Send elapsed time to HBO Go"
-msgstr ""
+msgstr "Folytatás pozíció elküldése HBO Go-ra"
 
 msgctxt "#30802"
 msgid "Get elapsed time from HBO Go"
-msgstr ""
+msgstr "Folytatás pozíció az HBO Go-ról"
 
 msgctxt "#30803"
 msgid "Set as watched on HBO Go"
-msgstr ""
+msgstr "Megnézettként megjelölés az HBO Go-n"
 
 msgctxt "#30804"
 msgid "Set as unwatched on HBO Go"
-msgstr ""
+msgstr "Nem látottként megjelölés az HBO Go-n"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr ""
+"Kodin belüli látott állapot figyelmen kívül hagyása (Csak az HBO Go-n belüli "
+"látott állapot mutatása)"
