--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 21:11+0100\n"
+"PO-Revision-Date: 2019-12-20 9:43+0100\n"
 "Last-Translator: tmihai20\n"
 "Language-Team: arvvoid\n"
 "Language: ro_RO\n"
@@ -192,7 +192,7 @@ msgstr "INFORMAȚII"
 
 msgctxt "#30714"
 msgid "I understand the risks and continue"
-msgstr "Înțeleg riscul și doresc să continui"
+msgstr "Înțeleg riscurile și doresc să continui"
 
 msgctxt "#30715"
 msgid "Stop, let me change the settings"
@@ -328,7 +328,7 @@ msgid ""
 "will be lost ) ?"
 msgstr ""
 "Sunteți sigur/ă că doriți să resetați complet setările dumneavoastră "
-"(înregistrearea dispozitivului va fi pierdută?"
+"(înregistrearea dispozitivului va fi pierdută) ?"
 
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
@@ -341,7 +341,7 @@ msgid ""
 "For help consult install instructions/official support thread"
 msgstr ""
 "Pachetul Cryptodome nu este prezent pe sistemul dumneavoastră, add-on-ul HBO "
-"Go nu poate rula. Pentru ajutor consultați instrucțiunile de instalate/"
+"Go nu poate rula. Pentru ajutor consultați instrucțiunile de instalare/"
 "topicul oficial de suport"
 
 msgctxt "#30696"
@@ -354,24 +354,24 @@ msgstr "Grupați listele de bază într-o categorie specială"
 
 msgctxt "#30800"
 msgid "Sync play time with HBO Go"
-msgstr ""
+msgstr "Sincronizați timpul de redare cu HBO Go"
 
 msgctxt "#30801"
 msgid "Send elapsed time to HBO Go"
-msgstr ""
+msgstr "Trimiteți timpul scurs către HBO Go"
 
 msgctxt "#30802"
 msgid "Get elapsed time from HBO Go"
-msgstr ""
+msgstr "Preluați timpul scurs din HBO Go"
 
 msgctxt "#30803"
 msgid "Set as watched on HBO Go"
-msgstr ""
+msgstr "Setează ca urmărit pe HBO Go"
 
 msgctxt "#30804"
 msgid "Set as unwatched on HBO Go"
-msgstr ""
+msgstr "Setează ca neurmărit pe HBO Go"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
-msgstr ""
+msgstr "Ignoră statusul din Kodi legat de timpul total (afișează doar statusul din HBO Go)"
