--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 21:09+0100\n"
+"PO-Revision-Date: 2019-12-20 15:29+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: cz_CZ\n"
@@ -262,15 +262,15 @@ msgstr "Týdenní žebříček"
 
 msgctxt "#30731"
 msgid "History"
-msgstr ""
+msgstr "Historie"
 
 msgctxt "#30732"
 msgid "Continue Watching"
-msgstr ""
+msgstr "Pokračovat ve sledování"
 
 msgctxt "#30733"
 msgid "Home Lists"
-msgstr ""
+msgstr "Vlastní seznam"
 
 msgctxt "#30650"
 msgid "Language"
@@ -355,32 +355,33 @@ msgstr ""
 
 msgctxt "#30696"
 msgid "Home Category"
-msgstr ""
+msgstr "Kategorie Výchozí"
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
-msgstr ""
+msgstr "Zařadit výchozí seznamy do speciální kategorie"
 
 msgctxt "#30800"
 msgid "Sync play time with HBO Go"
-msgstr ""
+msgstr "Synchronizovat čas přehrávání s HBO Go"
 
 msgctxt "#30801"
 msgid "Send elapsed time to HBO Go"
-msgstr ""
+msgstr "Zaslat uplynulý čas na HBO Go"
 
 msgctxt "#30802"
 msgid "Get elapsed time from HBO Go"
-msgstr ""
+msgstr "Získat uplynulý čas na HBO Go"
 
 msgctxt "#30803"
 msgid "Set as watched on HBO Go"
-msgstr ""
+msgstr "Nastavit na HBO Go jako 'Shlédnuté'"
 
 msgctxt "#30804"
 msgid "Set as unwatched on HBO Go"
-msgstr ""
+msgstr "Nastavit na HBO Go jako 'Neshlédnuté'"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr ""
+"Ignorovat Kodi status 'Shlédnuté' (Zobrazit jen HBO Go status 'Shlédnuté'"
