revision Croatian language #3

--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -26,9 +26,9 @@ msgid ""
 "UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
 "ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
 msgstr ""
-"MOLIMO VAS DA NE KONTAKTIRATE PODRŠKU SVOG OPERATERA O OVOM ADD-ON, TO JE "
-"NESLUŽBENI ADD-ON I NEMA SLUŽBENU PODRŠKU! POMOĆ ZAJEDNICE MOŽETE PRONAĆ NA "
-"ADD-ON GITHUB STRANICI ILI NA KODI FORUMU"
+"MOLIMO VAS DA NE KONTAKTIRATE PODRŠKU SVOG OPERATERA O OVOM ADD-ON-u. OVO JE "
+"NESLUŽBENI ADD-ON I NEMA SLUŽBENU PODRŠKU! POMOĆ ZAJEDNICE MOŽETE PRONAĆI NA "
+"ADD-ON-ovoj GITHUB STRANICI ILI NA KODI FORUMU"
 
 msgctxt "#30102"
 msgid "Operators"
@@ -40,8 +40,8 @@ msgid ""
 "the official site then try again, if the problem persists ask support with a "
 "full debug log"
 msgstr ""
-"Nažalost, niste ispravno prijavljeni, prekinuli igru. Pokušajte se prijaviti "
-"na službenu stranicu i pokušajte ponovno, ako se problem i dalje javlja, "
+"Niste ispravno prijavljeni, prekidam reprodukciju. Pokušajte se prijaviti na "
+"službenoj stranici i zatim pokušajte ponovno. Ako se problem i dalje javlja, "
 "zatražite podršku s potpunim debug zapisnikom"
 
 msgctxt "#30104"
