--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 21:08+0100\n"
+"PO-Revision-Date: 2019-12-26 11:00+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: fi_FI\n"
@@ -20,6 +20,18 @@ msgstr ""
 msgctxt "#30000"
 msgid "ENG"
 msgstr "fi_hbon"
+
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
 
 msgctxt "#30100"
 msgid "Web registration on "
