--- a/resources/language/resource.language.bg_bg/strings.po
+++ b/resources/language/resource.language.bg_bg/strings.po
@@ -7,24 +7,35 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-20 19:28+0100\n"
+"PO-Revision-Date: 2019-12-26 10:59+0100\n"
+"Last-Translator: \n"
 "Language-Team: arvvoid\n"
+"Language: bg_BG\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 2.2.4\n"
-"Last-Translator: \n"
-"Language: bg_BG\n"
 
 msgctxt "#30000"
 msgid "ENG"
 msgstr "BUL"
 
-#, fuzzy
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
+
 msgctxt "#30100"
 msgid "Web registration on "
-msgstr "Уеб регистрация на"
+msgstr "Уеб регистрация на "
 
 #, fuzzy
 msgctxt "#30101"
