--- a/resources/language/resource.language.bs_ba/strings.po
+++ b/resources/language/resource.language.bs_ba/strings.po
@@ -7,20 +7,32 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-20 19:17+0100\n"
+"PO-Revision-Date: 2019-12-26 10:59+0100\n"
+"Last-Translator: \n"
 "Language-Team: arvvoid\n"
+"Language: bs_BA@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
 "X-Generator: Poedit 2.2.4\n"
-"Last-Translator: \n"
-"Language: bs_BA@latin\n"
 
 msgctxt "#30000"
 msgid "ENG"
 msgstr "HRV"
+
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
 
 #, fuzzy
 msgctxt "#30100"
