--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -16,6 +16,18 @@ msgctxt "#30000"
 msgid "ENG"
 msgstr "HRV"
 
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
+
 msgctxt "#30100"
 msgid "Web registration on "
 msgstr "Registracija web-mjesta "
