--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-20 9:43+0100\n"
+"PO-Revision-Date: 2019-12-26 11:02+0100\n"
 "Last-Translator: tmihai20\n"
 "Language-Team: arvvoid\n"
 "Language: ro_RO\n"
@@ -21,6 +21,18 @@ msgstr ""
 msgctxt "#30000"
 msgid "ENG"
 msgstr "RON"
+
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
 
 msgctxt "#30100"
 msgid "Web registration on "
@@ -374,4 +386,6 @@ msgstr "Setează ca neurmărit pe HBO Go"
 
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
-msgstr "Ignoră statusul din Kodi legat de timpul total (afișează doar statusul din HBO Go)"
+msgstr ""
+"Ignoră statusul din Kodi legat de timpul total (afișează doar statusul din "
+"HBO Go)"
