--- a/resources/language/resource.language.sl_si/strings.po
+++ b/resources/language/resource.language.sl_si/strings.po
@@ -7,20 +7,32 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-20 19:37+0100\n"
+"PO-Revision-Date: 2019-12-26 11:03+0100\n"
+"Last-Translator: \n"
 "Language-Team: arvvoid\n"
+"Language: sl_SI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100>=3 && n"
 "%100<=4 ? 2 : 3);\n"
 "X-Generator: Poedit 2.2.4\n"
-"Last-Translator: \n"
-"Language: sl_SI\n"
 
 msgctxt "#30000"
 msgid "ENG"
 msgstr "SLV"
+
+msgctxt "#30001"
+msgid "ERROR"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Setup failed"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Unsupported region"
+msgstr ""
 
 #, fuzzy
 msgctxt "#30100"
