Language file updates #3

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -34,7 +34,7 @@ msgid "Unsupported region"
 msgstr ""
 
 msgctxt "#30004"
-msgid "Unexpected error"
+msgid "An unexpected error has occurred."
 msgstr ""
 
 msgctxt "#30005"
