--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:32+0100\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-01-07 21:59+0100\n"
+"Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -21,37 +21,30 @@ msgctxt "#30001"
 msgid "ERROR"
 msgstr "HIBA"
 
-#, fuzzy
 msgctxt "#30002"
 msgid "Setup failed"
-msgstr "A telepítés nem sikerült."
+msgstr "A beállítás nem sikerült."
 
-#, fuzzy
 msgctxt "#30003"
 msgid "Unsupported region"
-msgstr "Nem támogatott terület"
+msgstr "Nem támogatott régió"
 
-#, fuzzy
 msgctxt "#30004"
 msgid "An unexpected error has occurred."
 msgstr "Váratlan hiba történt."
 
-#, fuzzy
 msgctxt "#30005"
 msgid "Error getting content from Hbo go"
-msgstr "Hiba az HBO-ból érkező tartalom beolvasása közben"
+msgstr "Nem sikerült a tartalmat beolvasni az HBO Go-ból"
 
-#, fuzzy
 msgctxt "#30006"
 msgid "Error sending data to Hbo go"
-msgstr "Hiba a HBO-nak történő adatküldéskor"
+msgstr "Nem sikerült az adatküldés az HBO Go-nak"
 
-#, fuzzy
 msgctxt "#30007"
 msgid "Error deleting data from Hbo go"
-msgstr "Hiba az adatok törlése az HBO-ból megy"
+msgstr "Nem sikerült az adattörlés az HBO Go-ból"
 
-#, fuzzy
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Kommunikációs hiba, visszaadott állapot: "
