Optional media type in listings

--- a/resources/language/resource.language.bg_bg/strings.po
+++ b/resources/language/resource.language.bg_bg/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:23+0100\n"
+"PO-Revision-Date: 2020-01-25 22:50+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: bg_BG\n"
@@ -391,6 +391,10 @@ msgstr "Експертно"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Силови скреперни заглавия"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 msgctxt "#30680"
 msgid "Session"
