--- a/resources/language/resource.language.bs_ba/strings.po
+++ b/resources/language/resource.language.bs_ba/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:26+0100\n"
+"PO-Revision-Date: 2020-01-25 22:50+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: bs_BA@latin\n"
@@ -389,6 +389,10 @@ msgstr "Ekspert"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Primeni prijateljske naslove"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 #, fuzzy
 msgctxt "#30680"
