--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:36+0100\n"
+"PO-Revision-Date: 2020-01-25 22:53+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid, kowalmisiek\n"
 "Language: pl_PL\n"
@@ -347,6 +347,10 @@ msgstr "Eksport"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Wymuś użycie scrapera z przyjaznymi tytułami"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 msgctxt "#30680"
 msgid "Session"
