--- a/resources/language/resource.language.pt_pt/strings.po
+++ b/resources/language/resource.language.pt_pt/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:37+0100\n"
+"PO-Revision-Date: 2020-01-25 22:54+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: pt\n"
@@ -384,6 +384,10 @@ msgstr "Especialista"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Títulos amigáveis do raspador da força"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 msgctxt "#30680"
 msgid "Session"
