--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:29+0100\n"
+"PO-Revision-Date: 2020-01-25 22:51+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
@@ -338,6 +338,10 @@ msgstr "Experto"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Forzar títulos amigables a los extractores (scrapers)"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 msgctxt "#30680"
 msgid "Session"
