--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -328,6 +328,10 @@ msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Prisiliti naslove prikladne za brisanje"
 
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
+
 msgctxt "#30680"
 msgid "Session"
 msgstr "Sesija"
