--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-04 21:39+0100\n"
+"PO-Revision-Date: 2020-01-25 22:54+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: ro_RO\n"
@@ -341,6 +341,10 @@ msgstr "Avansat"
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
 msgstr "Forțează nume prietenoase pentru titluri"
+
+msgctxt "#30672"
+msgid "Use episode media type in listings"
+msgstr ""
 
 msgctxt "#30680"
 msgid "Session"
