Improve media type set spain/nordic handler, optimizations

--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-25 22:50+0100\n"
+"PO-Revision-Date: 2020-01-28 21:42+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: cz_CZ\n"
@@ -337,7 +337,7 @@ msgid "Force scraper friendly titles"
 msgstr "Vynutit titulky kompatibilní s popisovači médií"
 
 msgctxt "#30672"
-msgid "Use episode media type in listings"
+msgid "Use generic video media type in listings"
 msgstr ""
 
 msgctxt "#30680"
