--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-25 22:52+0100\n"
+"PO-Revision-Date: 2020-01-28 21:44+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
@@ -332,7 +332,7 @@ msgid "Force scraper friendly titles"
 msgstr "Keresőbarát címek kényszerítése"
 
 msgctxt "#30672"
-msgid "Use episode media type in listings"
+msgid "Use generic video media type in listings"
 msgstr ""
 
 msgctxt "#30680"
