--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-01-25 22:54+0100\n"
+"PO-Revision-Date: 2020-01-28 21:46+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: ro_RO\n"
@@ -343,7 +343,7 @@ msgid "Force scraper friendly titles"
 msgstr "Forțează nume prietenoase pentru titluri"
 
 msgctxt "#30672"
-msgid "Use episode media type in listings"
+msgid "Use generic video media type in listings"
 msgstr ""
 
 msgctxt "#30680"
